Implement A2A server for Robo Advisor, RAG, and Supervisor agents with task management and communication capabilities

--- a/docker/Dockerfile.a2a_ra_agent
+++ b/docker/Dockerfile.a2a_ra_agent
@@ -38,4 +38,4 @@ ENV PYTHONPATH=/app
 EXPOSE 8100
 
 # Run A2A server
-CMD ["python", "-m", "uvicorn", "a2a.server:app", "--host", "0.0.0.0", "--port", "8100"]
+CMD ["python", "-m", "uvicorn", "a2a.ra_server:app", "--host", "0.0.0.0", "--port", "8100"]
