--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,27 +77,123 @@ services:
       - redis
     restart: unless-stopped
 
+  a2a_supervisor:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.a2a_supervisor
+    container_name: ra_a2a_supervisor
+    ports:
+      - "8099:8099"
+    environment:
+      - A2A_PORT=8099
+      - A2A_SERVICE_URL=http://a2a_supervisor:8099
+      - IS_DOCKER=true
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - REDIS_URL=redis://redis:6379
+      - PYTHONPATH=/app
+    env_file:
+      - .env
+    depends_on:
+      - redis
+      - a2a_robo_advisor
+      - a2a_rag_agent
+      - a2a_general_agent
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8099/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
   a2a_robo_advisor:
     build:
       context: .
-      dockerfile: docker/Dockerfile.a2a_agent
+      dockerfile: docker/Dockerfile.a2a_ra_agent
     container_name: ra_a2a_robo_advisor
     ports:
       - "8100:8100"
     environment:
       - A2A_PORT=8100
+      - A2A_SERVICE_URL=http://a2a_robo_advisor:8100
+      - IS_DOCKER=true
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - TAVILY_API_KEY=${TAVILY_API_KEY}
       - REDIS_URL=redis://redis:6379
       - PYTHONPATH=/app
       - MCP_MARKET_DATA_URL=http://mcp_market_data:8001
       - MCP_PORTFOLIO_URL=http://mcp_portfolio:8002
+      - MCP_TAVILY_URL=http://mcp_tavily:8003
+      - MCP_RAG_URL=http://mcp_rag:8004
     env_file:
       - .env
     depends_on:
       - redis
       - mcp_market_data
       - mcp_portfolio
+      - mcp_tavily
+      - a2a_rag_agent
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8100/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  a2a_rag_agent:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.a2a_rag_agent
+    container_name: ra_a2a_rag_agent
+    ports:
+      - "8101:8101"
+    environment:
+      - A2A_PORT=8101
+      - A2A_SERVICE_URL=http://a2a_rag_agent:8101
+      - IS_DOCKER=true
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - REDIS_URL=redis://redis:6379
+      - PYTHONPATH=/app
+      - MCP_RAG_URL=http://mcp_rag:8004
+    env_file:
+      - .env
+    depends_on:
+      - redis
+      - mcp_rag
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8101/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  a2a_general_agent:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.a2a_general_agent
+    container_name: ra_a2a_general_agent
+    ports:
+      - "8102:8102"
+    environment:
+      - A2A_PORT=8102
+      - A2A_SERVICE_URL=http://a2a_general_agent:8102
+      - IS_DOCKER=true
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - REDIS_URL=redis://redis:6379
+      - PYTHONPATH=/app
+    env_file:
+      - .env
+    depends_on:
+      - redis
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8102/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 volumes:
   redis_data:
