Refactor A2A agents architecture and enhance message handling
- Unified Dockerfile for A2A agents to streamline builds and reduce duplication.
- Updated agent initialization to support asynchronous A2A client setup.
- Enhanced message processing with new utility functions for text extraction and response creation.
- Improved error handling and logging in agent communication.
- Removed deprecated example usage and quick actions from Streamlit app.
- Updated Postman collection for testing A2A protocol servers.
- Added context ID handling in agent state and message processing.

--- a/config/a2a_config.yaml
+++ b/config/a2a_config.yaml
@@ -5,81 +5,32 @@ a2a:
   agents:
     supervisor:
       name: "Supervisor Agent"
-      description: "Main orchestrator agent that routes tasks to specialized agents"
-      version: "1.0.0"
-      url: "http://a2a_supervisor:8099"
-      local_card_url: "http://localhost:8099/.well-known/agent.json"
-      card_url: "http://a2a_supervisor:8099/.well-known/agent.json"
-      a2a_endpoint: "http://a2a_supervisor:8099/a2a"
-      capabilities:
-        - task_orchestration
-        - agent_routing
-        - multi_agent_coordination
-        - task_classification
-        - workflow_management
-      modalities:
-        - text
-        - structured_data
+      docker_url: "http://a2a_supervisor:8099"
+      local_url: "http://localhost:8099"
       authentication:
         type: "none" # For development; use OAuth2 in production
       enabled: true
 
     robo_advisor:
       name: "Robo Advisor Agent"
-      description: "AI-powered investment advisory and portfolio analysis agent"
-      version: "1.0.0"
-      url: "http://a2a_robo_advisor:8100"
-      local_card_url: "http://localhost:8100/.well-known/agent.json"
-      card_url: "http://a2a_robo_advisor:8100/.well-known/agent.json"
-      a2a_endpoint: "http://a2a_robo_advisor:8100/a2a"
-      capabilities:
-        - portfolio_analysis
-        - investment_recommendation
-        - risk_assessment
-        - market_research
-        - performance_calculation
-      modalities:
-        - text
-        - structured_data
+      docker_url: "http://a2a_robo_advisor:8100"
+      local_url: "http://localhost:8100"
       authentication:
         type: "none" # For development; use OAuth2 in production
       enabled: true
 
     rag_agent:
       name: "RAG Agent"
-      description: "Specialized agent for knowledge base search and retrieval-augmented generation"
-      version: "1.0.0"
-      url: "http://a2a_rag_agent:8101"
-      local_card_url: "http://localhost:8101/.well-known/agent.json"
-      card_url: "http://a2a_rag_agent:8101/.well-known/agent.json"
-      a2a_endpoint: "http://a2a_rag_agent:8101/a2a"
-      capabilities:
-        - knowledge_base_search
-        - document_retrieval
-        - rag_query
-        - semantic_search
-      modalities:
-        - text
-        - structured_data
+      docker_url: "http://a2a_rag_agent:8101"
+      local_url: "http://localhost:8101"
       authentication:
         type: "none" # For development; use OAuth2 in production
       enabled: true
 
     general_agent:
       name: "General Agent"
-      description: "General purpose conversational agent for question answering and task guidance"
-      version: "1.0.0"
-      url: "http://a2a_general_agent:8102"
-      local_card_url: "http://localhost:8102/.well-known/agent.json"
-      card_url: "http://a2a_general_agent:8102/.well-known/agent.json"
-      a2a_endpoint: "http://a2a_general_agent:8102/a2a"
-      capabilities:
-        - general_conversation
-        - question_answering
-        - information_retrieval
-        - task_guidance
-      modalities:
-        - text
+      docker_url: "http://a2a_general_agent:8102"
+      local_url: "http://localhost:8102"
       authentication:
         type: "none" # For development; use OAuth2 in production
       enabled: true
