--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,10 @@ services:
   a2a_supervisor:
     build:
       context: .
-      dockerfile: docker/Dockerfile.a2a_supervisor
+      dockerfile: docker/a2a_agents/Dockerfile
+      args:
+        AGENT_TYPE: supervisor
+        PORT: 8099
     container_name: ra_a2a_supervisor
     ports:
       - "8099:8099"
@@ -100,7 +103,13 @@ services:
       - a2a_general_agent
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8099/health"]
+      test:
+        [
+          "CMD",
+          "curl",
+          "-f",
+          "http://localhost:8099/.well-known/agent-card.json",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -109,7 +118,10 @@ services:
   a2a_robo_advisor:
     build:
       context: .
-      dockerfile: docker/Dockerfile.a2a_ra_agent
+      dockerfile: docker/a2a_agents/Dockerfile
+      args:
+        AGENT_TYPE: ra_agent
+        PORT: 8100
     container_name: ra_a2a_robo_advisor
     ports:
       - "8100:8100"
@@ -135,7 +147,13 @@ services:
       - a2a_rag_agent
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8100/health"]
+      test:
+        [
+          "CMD",
+          "curl",
+          "-f",
+          "http://localhost:8100/.well-known/agent-card.json",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -144,7 +162,10 @@ services:
   a2a_rag_agent:
     build:
       context: .
-      dockerfile: docker/Dockerfile.a2a_rag_agent
+      dockerfile: docker/a2a_agents/Dockerfile
+      args:
+        AGENT_TYPE: rag_agent
+        PORT: 8101
     container_name: ra_a2a_rag_agent
     ports:
       - "8101:8101"
@@ -163,7 +184,13 @@ services:
       - mcp_rag
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8101/health"]
+      test:
+        [
+          "CMD",
+          "curl",
+          "-f",
+          "http://localhost:8101/.well-known/agent-card.json",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -172,7 +199,10 @@ services:
   a2a_general_agent:
     build:
       context: .
-      dockerfile: docker/Dockerfile.a2a_general_agent
+      dockerfile: docker/a2a_agents/Dockerfile
+      args:
+        AGENT_TYPE: general_agent
+        PORT: 8102
     container_name: ra_a2a_general_agent
     ports:
       - "8102:8102"
@@ -189,7 +219,13 @@ services:
       - redis
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8102/health"]
+      test:
+        [
+          "CMD",
+          "curl",
+          "-f",
+          "http://localhost:8102/.well-known/agent-card.json",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
