Refactor A2A Client and Server for Streaming Support and Redis Task Management
- Updated `RemoteAgentConnections` to yield responses in real-time from `send_message`.
- Enhanced `A2AClientManager` to support streaming responses and added error handling.
- Integrated Redis-based task management in `general_server`, `ra_server`, `rag_server`, and `supervisor_server`.
- Created `RedisTaskManager` and `RedisTaskStore` for centralized task tracking and management.
- Added task metadata handling with `TaskType` and `TaskPriority` enums.
- Refactored `SupervisorAgent` to support streaming responses and task classification.
- Updated Streamlit app to handle streaming responses from the supervisor agent.
- Improved logging and error handling throughout the codebase.

--- a/docker/a2a_agents/Dockerfile
+++ b/docker/a2a_agents/Dockerfile
@@ -34,6 +34,7 @@ RUN pip install --no-cache-dir uv && \
 COPY src/agents/ /app/src/agents/
 COPY src/a2a_agents /app/src/a2a_agents
 COPY src/mcp_custom/ /app/src/mcp_custom/
+COPY src/task_management/ /app/src/task_management/
 COPY config/ /app/config/
 
 # Set Python path so modules can be imported
