MCP 서버에 시장 지표 조회 기능 추가 및 관련 도구 구현

--- a/docker/mcp_servers/Dockerfile.market_data
+++ b/docker/mcp_servers/Dockerfile.market_data
@@ -8,7 +8,8 @@ RUN pip install --no-cache-dir \
     httpx \
     python-dotenv \
     fastapi>=0.115.0 \
-    uvicorn>=0.30.0
+    uvicorn>=0.30.0 \
+    yfinance
 
 # Copy server file
 COPY src/mcp_custom/servers/market_data_server.py /app/server.py
