--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - "8001:8001"
     environment:
       - MCP_SERVER_PORT=8001
+      - FRED_API_KEY=${FRED_API_KEY}
     depends_on:
       - redis
     restart: unless-stopped
